<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >




<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you love movies? Then this is the quiz for you.! Put a test to your knowledge.!"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     
      <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eventarea"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ITB 405,406,407,416,418,419"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     
     <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Krishna : 9494401904"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    
    

</LinearLayout>



</ScrollView>
