<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    
     <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Come up with an innovative solution for E-Governance. It can be in the form of  an Mobile or computer application."
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
     
      <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kranthi : 8099224777"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      
      
       <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eventarea"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
     
      <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ITB computer lab"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    

</LinearLayout>

</ScrollView>
