<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >



<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Design an ammunition loading system (a crane) using only hydraulics and 

simple mechanical mechanisms. (Watch YouTube videos for more help)"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eventarea"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ITB projector room"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      
      
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="krishna-9493870764,\n manoj-8106944540,\nravi kiran, yogananda, Darshana"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    

</LinearLayout>

</ScrollView>