<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >




<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    
    
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Ultimate rover war, Cartoon style"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
         <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Eventarea"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      
        <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ITB Centre space"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        
         <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      
      
      
        <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hemanth 8977656595\n arun 8985932938,\n tejasree, kireeti, dhramateja"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        

</LinearLayout>


</ScrollView>